Fix layout issues with pipeline deal forecast modal. Buttons are aligned and dropdowns don't get cut off.

--- a/app/stylesheets/forms/_checklist.scss
+++ b/app/stylesheets/forms/_checklist.scss
@@ -28,6 +28,11 @@
     tr{
       td{
         padding: 5px;
+        vertical-align: middle;
+
+        input.field {
+          margin-bottom: 0;
+        }
 
         &.check{
           input[type=checkbox]{
